[gd_scene load_steps=2 format=3 uid="uid://cqw7hwgei7l50"]

[ext_resource type="Script" path="res://Scripts/Lobby.gd" id="1_t77qt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_t77qt")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HostGameButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Game"

[node name="StartGameButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="ServerIPHBox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ServerIPLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/ServerIPHBox"]
layout_mode = 2
text = "Enter Host IP: "

[node name="ServerIPTextEdit" type="LineEdit" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/ServerIPHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "127.0.0.1"
alignment = 1

[node name="PlayerNameHBox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/PlayerNameHBox"]
layout_mode = 2
text = "Enter name: "
horizontal_alignment = 1

[node name="PlayerNameTextEdit" type="LineEdit" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/PlayerNameHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
placeholder_text = "Anon"

[node name="PlayerNameButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/PlayerNameHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "OK"

[node name="ConnectionStatusLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
